Refactor SOE class constructor and methods for clarity and functionality

--- a/uwiJava/javaProjectOne/.vscode/settings.json
+++ b/uwiJava/javaProjectOne/.vscode/settings.json
@@ -6,6 +6,6 @@
     ],
     "editor.tabCompletion": "on",
     "github.copilot.chat.edits.codesearch.enabled": true,
-    "github.copilot.chat.editor.temporalContext.enabled": true,
+    "github.copilot.chat.editor.temporalContext.enabled": false,
     "errorLens.onSaveUpdateOnActiveEditorChange": false
 }
